# rustycheckers

./: Cargo.toml  README.md
src/: lib.rs
src/board/: coordinate.rs  game_piece.rs  mod.rs  mov.rs
src/game/: engine.rs  mod.rs
